After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722271 - The icons in the toolbar in the sidebar of the filebrowser is wrong in RTL
The icons in the toolbar in the sidebar of the filebrowser is wrong in RTL
Status: RESOLVED FIXED
Product: gedit-plugins
Classification: Other
Component: General
3.11.x
Other Mac OS
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-15 15:22 UTC by Yosef Or Boczko
Modified: 2019-03-23 20:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
filebrowser: Fix the icons of the buttons in the toolbar in RTL (4.68 KB, patch)
2014-01-15 15:22 UTC, Yosef Or Boczko
committed Details | Review

Description Yosef Or Boczko 2014-01-15 15:22:02 UTC
See the patch.
Comment 1 Yosef Or Boczko 2014-01-15 15:22:24 UTC
Created attachment 266366 [details] [review]
filebrowser: Fix the icons of the buttons in the toolbar in RTL
Comment 2 Ignacio Casal Quinteiro (nacho) 2014-01-15 15:24:47 UTC
Review of attachment 266366 [details] [review]:

Looks good.
Comment 3 Yosef Or Boczko 2014-01-15 15:29:24 UTC
Review of attachment 266366 [details] [review]:

Pushed as 4e1e584 - filebrowser: Fix the icons of the buttons in the toolbar in RTL