filebrowser: Fix the icons of the buttons in the toolbar in RTL

https://bugzilla.gnome.org/show_bug.cgi?id=722271