plugins/filebrowser/gedit-file-browser-widget.c
@@ -121,7 +121,9 @@ struct _GeditFileBrowserWidgetPrivate
 	GMenuModel *bookmarks_menu;
 
 	GtkWidget *previous_button;
+	GtkWidget *previous_image;
 	GtkWidget *next_button;
+	GtkWidget *next_image;
 
 	GtkWidget *combo;
 	GtkTreeStore *combo_model;
@@ -557,7 +559,9 @@ gedit_file_browser_widget_class_init (GeditFileBrowserWidgetClass *klass)
 	gtk_widget_class_set_template_from_resource (widget_class,
 	                                             "/org/gnome/gedit/plugins/file-browser/ui/gedit-file-browser-widget.ui");
 	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, previous_button);
+	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, previous_image);
 	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, next_button);
+	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, next_image);
 	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, combo);
 	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, combo_model);
 	gtk_widget_class_bind_template_child_private (widget_class, GeditFileBrowserWidget, location_entry);
@@ -949,9 +953,12 @@ gedit_file_browser_widget_init (GeditFileBrowserWidget *obj)
 {
 	GtkBuilder *builder;
 	GAction *action;
+	gboolean rtl;
 	GError *error = NULL;
 
 	obj->priv = gedit_file_browser_widget_get_instance_private (obj);
+
+	rtl = gtk_widget_get_direction (GTK_WIDGET (obj)) == GTK_TEXT_DIR_RTL;
 
 	obj->priv->filter_pattern_str = g_strdup ("");
 	obj->priv->bookmarks_hash = g_hash_table_new_full (g_file_hash,
@@ -999,6 +1006,13 @@ gedit_file_browser_widget_init (GeditFileBrowserWidget *obj)
 	set_enable_delete (obj, obj->priv->enable_delete);
 
 	gtk_widget_init_template (GTK_WIDGET (obj));
+
+	gtk_image_set_from_icon_name (GTK_IMAGE (obj->priv->previous_image),
+				      rtl ? "go-previous-rtl-symbolic" : "go-previous-symbolic",
+				      GTK_ICON_SIZE_MENU);
+	gtk_image_set_from_icon_name (GTK_IMAGE (obj->priv->next_image),
+				      rtl ? "go-next-rtl-symbolic" : "go-next-symbolic",
+				      GTK_ICON_SIZE_MENU);
 
 	g_signal_connect (obj->priv->previous_button, "button-press-event",
 	                  G_CALLBACK (on_location_button_press_event), obj);
